# hms-2.0

./: .env.example  .gitignore  AGENTS.md  README.md  WINDOWS-SETUP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260628_0001_foundation.py  20260628_0002_identity.py  20260628_0003_domain_schema.py  20260706_0004_asset_end_labels.py  20260707_0005_customer_asset_notes.py  20260707_0006_certificate_batch_jobs.py  20260707_0007_notifications.py  20260707_0008_user_password_hash.py  20260712_0009_browser_auth_security.py  20260713_0010_password_reset.py  20260717_0011_notification_read_state.py  20260718_0012_customer_requirements.py  20260718_0013_asset_profile_fields.py
backend/src/hms_backend/: __init__.py
backend/src/hms_backend/app/: cli.py  main.py
backend/src/hms_backend/app/api/: admin.py  auth.py  browser_auth.py  dependencies.py  jobs.py  notifications.py  public.py  records.py  schemas.py  sync.py  sync_schemas.py
backend/src/hms_backend/app/core/: audit.py  auth.py  cache.py  celery_app.py  config.py  mfa.py  object_storage.py  oidc.py  password_reset_tokens.py  passwords.py  rate_limit.py  rbac.py  redis.py  repository.py  secret_envelope.py  session_tokens.py
backend/src/hms_backend/app/data/: common_passwords.txt
backend/src/hms_backend/app/models/: base.py  foundation.py
backend/src/hms_backend/app/modules/assets/: __init__.py  models.py
backend/src/hms_backend/app/modules/certificates/: __init__.py  engine_client.py  issuance.py  mapping.py  models.py  tasks.py  verification.py
backend/src/hms_backend/app/modules/customers/: __init__.py  models.py
backend/src/hms_backend/app/modules/identity/: __init__.py  browser_auth.py  models.py  password_reset.py  user_admin.py
backend/src/hms_backend/app/modules/inspections/: __init__.py  models.py
backend/src/hms_backend/app/modules/jobs/: models.py
backend/src/hms_backend/app/modules/notifications/: enums.py  idempotency.py  models.py  outbox.py  policy.py  (+6 more)
backend/src/hms_backend/app/tooling/: __init__.py  auth_seed.py  local_seed.py  migration.py  synthetic.py  types.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_boundary.py  test_auth_crypto.py  test_auth_login.py  test_auth_production_config.py  test_auth_rate_limits.py  test_browser_auth_api.py  test_browser_auth_models.py  test_browser_auth_service.py  test_browser_password_reset_api.py  test_certificate_bulk_jobs.py  test_certificate_generation.py  test_core_records_api.py  test_customer_user_scope.py  test_dev_auth_seed.py  test_domain_import_plan.py  test_domain_models.py  test_foundation.py  test_health.py  test_local_seed.py  test_mfa_security.py  test_migration_browser_auth.py  test_migration_harness.py  test_notification_channels.py  test_notification_policy.py  test_notifications_api.py  test_notifications_engine.py  test_object_storage.py  test_object_storage_s3.py  test_password_policy.py  test_password_reset_delivery.py  test_password_reset_service.py  test_password_reset_tokens.py  test_rbac.py  test_redis_cache.py  test_secret_envelope.py  test_session_tokens.py  test_sync_api.py  test_synthetic_data.py  (+1 more)
services/certificate/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/certificate/proto/: certificate.proto
services/certificate/scripts/: gen_proto.sh
services/certificate/src/hms_certificate/: __init__.py  config.py  dev_ca.py  domain.py  fonts.py  rendering.py  server.py  service.py  signing.py
services/certificate/src/hms_certificate/proto/: __init__.py  certificate_pb2.py  certificate_pb2_grpc.py
services/certificate/tests/: conftest.py  test_rendering.py  test_service.py  test_signing.py  test_verification.py
(+171 files in other folders)
