[project]
name = "hms-backend"
version = "0.1.0"
description = "BAT Engineering HMS 2.0 FastAPI backend"
readme = "README.md"
authors = [
    { name = "Jani Syed", email = "51842082+janisyed18@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=3.0.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.41.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.28.1",
    "fastapi>=0.138.1",
    "greenlet>=3.5.3",
    "grpcio>=1.64.0",
    "protobuf>=5.26.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.9.0",
    "pyotp>=2.9.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
hms-backend = "hms_backend.app.cli:main"
hms-api = "hms_backend.app.cli:main"
hms-seed = "hms_backend.app.tooling.local_seed:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fakeredis>=2.23.0",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
# Generated protobuf stubs are vendored verbatim from services/certificate.
extend-exclude = ["src/hms_backend/app/modules/certificates/enginepb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["src/hms_backend/app/modules/certificates/enginepb/"]

[[tool.mypy.overrides]]
module = "hms_backend.app.modules.certificates.enginepb.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "test_certificate_bulk_jobs",
    "test_certificate_generation",
    "test_redis_cache",
    "tests.test_certificate_bulk_jobs",
    "tests.test_certificate_generation",
    "tests.test_redis_cache",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
