[project]
name = "hms-certificate-engine"
version = "0.1.0"
description = "HMS 2.0 gRPC certificate engine — renders and cryptographically signs hose test certificates as archival PDFs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.81.1,<1.82",
    "grpcio-health-checking>=1.81.1,<1.82",
    "grpcio-reflection>=1.81.1,<1.82",
    "protobuf>=6.33,<7",
    "reportlab>=4.1",
    "qrcode[pil]>=7.4",
    "pyhanko>=0.25",
    "cryptography>=42.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
hms-certificate-engine = "hms_certificate.server:serve"

[dependency-groups]
dev = [
    "grpcio-tools>=1.81.1,<1.82",
    "pypdf>=4.2",
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hms_certificate"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
# Generated protobuf stubs are excluded from linting.
exclude = ["src/hms_certificate/proto/certificate_pb2*.py*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["src/hms_certificate/proto/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
